--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="style/style.css">
   <script src="https://kit.fontawesome.com/e127519916.js" crossorigin="anonymous"></script>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
 
 <body style="background-color: #19191d">
   <div class="row">
-    <div class="col-md-2 mr-">
+    <div class="col-md-2">
       <aside class="m-3 px-2 pb-4 rounded" style="background-color: rgb(36, 36, 46); width: 20rem">
         <div class="container-fluid text-center pb-3" style="background-color: #25252f">
           <div class="row">
