--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
             <img class="slideimg" src="img\back.jpeg" alt="" width="1500" height="400">
             <div class="col-md-6">
               <div class="pl-5 mohtava text-left text-white font-weight-bold pb-5">
-                <h1 class="titr">I would guide you <br>like a light!</h1>
+                <h1 class="titr">The best way to predict <br> the future is to invent it . . .</h1>
                 <p style="word-spacing:5px;">
                   <span>
                     <<span class="text-warning">code
                   </span>></span>
-                  I build Python applications
+                  Make it work, make it right, make it fast
                   <span>
                     <<span class="text-warning">/code
                   </span>></span>
