--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="background-color: #19191d">
   <div class="row">
     <div class="col-md-2">
-      <aside class="m-3 px-2 pb-4 rounded" style="background-color: rgb(36, 36, 46); width: 20rem">
+      <aside class="m-3 mr-5 px-2 pb-4 rounded" style="background-color: rgb(36, 36, 46);">
         <div class="container-fluid text-center pb-3" style="background-color: #25252f">
           <div class="row">
             <div class="col-md-2 d-flex flex-column align-items-center  text-white">
@@ -129,7 +129,7 @@
     </div>
     <div class="col-md-10 ">
       <main>
-        <sectionP>
+        <secbtionP>
           <!-- slide -->
           <div class="row ml-5 ">
             <img class="slideimg" src="img\back.jpeg" alt="" width="1500" height="400">
@@ -155,6 +155,161 @@
               <img class="me" src="img\me.png" alt="" width="350" height="350">
             </div>
           </div>
+          </section>
+          <!-- icons -->
+          <section>
+          <div class="row m-3 ml-5">
+            <div class="col-md-3">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="/icons/teacher.svg" alt="teacher-icon" width="120">
+                </div>
+                <div class="col-md-7 ml-3 text-left d-flex flex-column justify-content-center">
+                  <h2 class="text-white">A teacher</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="/icons/developer.svg" alt="teacher-icon" width="120">
+                </div>
+                <div class="col-md-7 ml-3 text-left d-flex flex-column justify-content-center">
+                  <h2 class="text-white">Front-end Developer</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="/icons/python.svg" alt="teacher-icon" width="120">
+                </div>
+                <div class="col-md-7 ml-3 text-left d-flex flex-column justify-content-center">
+                  <h2 class="text-white">Python Developer</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="/icons/ai.svg" alt="teacher-icon" width="120">
+                </div>
+                <div class="col-md-7 ml-3 text-left d-flex flex-column justify-content-center">
+                  <h2 class="text-white">Designer</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          </section>
+          <!-- end of icons  -->
+          <!-- SKILLS CARD -->
+          <section>
+            <h3 class="text-white ml-5 mt-5">My Skills</h3>
+            <div class="row ml-4 mt-4">
+              <div class="col-md-3">
+                <!-- first card  -->
+                <div class="card" style="background-color: #2C2C36;">
+                  <div class="card-header text-info text-center">
+                    <h4 >Teaching</h4>
+                  </div>
+                  <div class="pt-2 text-white pb-4 pt-3">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <ol>
+                          <li>Conservatory courses</li>
+                          <li>Adobe Photoshop</li>
+                          <li>Adobe Illustrator</li>
+                          <li>Wordpress</li>
+                        </ol>
+                      </div>
+                      <div class="col-md-5">
+                        <ol start="5">
+                          <li>Python</li>
+                          <li>Html & CSS</li>
+                          <li>Bootstrap</li>
+                          <li>Basic SQL</li>
+                        </ol>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end of first card -->
+              <!-- Second card  -->
+              <div class="col-md-3">
+                <div class="card" style="background-color: #2C2C36;">
+                  <div class="card-header text-info text-center">
+                    <h4 >Web </h4>
+                  </div>
+                  <div class="pt-2 text-white pb-4 pt-3">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <ol>
+                          <li>HTML</li>
+                          <li>CSS</li>
+                          <li>Bootstrap</li>
+                          <li>Tailwind</li>
+                        </ol>
+                      </div>
+                      <div class="col-md-5">
+                        <ol start="5">
+                          <li>PHP</li>
+                          <li>Django</li>
+                          <li>JavaScript</li>
+                        </ol>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end of second card -->
+              <!-- third card -->
+              <div class="col-md-3">
+                <div class="card" style="background-color: #2C2C36;">
+                  <div class="card-header text-info text-center">
+                    <h4 >Python</h4>
+                  </div>
+                  <div class="pt-2 text-white pb-5 pt-3">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <ol>
+                          <li>Tkinter</li>
+                          <li>Django</li>
+                          <li>Turtle</li>
+                        </ol>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end of third card  -->
+              <!-- fourth card  -->
+              <div class="col-md-3">
+                <div class="card mr-3" style="background-color: #2C2C36;">
+                  <div class="card-header text-info text-center">
+                    <h4 >Design </h4>
+                  </div>
+                  <div class="pt-2 text-white pb-4 pt-3">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <ol>
+                          <li>Adobe Photoshop</li>
+                          <li>Adobe Illustrator</li>
+                          <li>Figma</li>
+                          <li>Sketchup</li>
+                        </ol>
+                      </div>
+                      <div class="col-md-5">
+                        <ol start="5">
+                          <li>Adobe XD</li>
+                        </ol>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end of fourth card  -->
+            </div>
           </section>
       </main>
 
