--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <aside
         class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2">
         <div>
-            <img class="rounded-full max-w-xs lg:w-1/2 lg:mx-auto" src="/img/logojpeg.jpeg" alt="">
+            <img class="rounded-full max-w-xs lg:w-1/2 lg:mx-auto" src="/public/img/logojpeg.jpeg" alt="">
         </div>
         <div class="inline-flex space-x-5 py-5">
             <i class="fa fa-2x fa-instagram" aria-hidden="true"></i>
@@ -68,8 +68,8 @@
     <main class="lg:absolute lg:right-2 lg:top-0">
         <!-- slider  -->
         <div class="hidden lg:visible lg:block m-3 lg:relative">
-            <img class="max-h-500 opacity-50 " src="/img/back.jpeg" alt="" width="1250">
-            <img class="absolute -right-10 bottom-0" src="/img/me2.png" alt="" width="400">
+            <img class="max-h-500 opacity-50 " src="/public/img/back.jpeg" alt="" width="1250">
+            <img class="absolute -right-10 bottom-0" src="/public/img/me2.png" alt="" width="400">
             <div class="absolute top-14  whitespace-pre-line px-5 pt-10 ">
                 <h1 class="text-white font-bold text-4xl relative">Those who cannot
                     <span class="text-yellow-500 ">change their minds</span>
@@ -86,19 +86,19 @@
         <div
             class="flex flex-col items-center justify-center pt-5 space-y-5 mb-5 lg:flex-row lg:pt-0 lg:ml-3 lg:space-y-0 lg:space-x-20 lg:mb-0">
             <div class="text-center font-bold text-white text-2xl ">
-                <img class=" max-h-44 mx-auto lg:max-h-24" src="/icons/teacher.svg" alt="">
+                <img class=" max-h-44 mx-auto lg:max-h-24" src="/public/icons/teacher.svg" alt="">
                 <h3>A teacher</h3>
             </div>
             <div class="text-center font-bold text-white text-2xl ">
-                <img class=" max-h-44 mx-auto  lg:max-h-24" src="/icons/developer.svg" alt="">
+                <img class=" max-h-44 mx-auto  lg:max-h-24" src="/public/icons/developer.svg" alt="">
                 <h3>Front-end Developer</h3>
             </div>
             <div class="text-center font-bold text-white text-2xl ">
-                <img class=" max-h-44 mx-auto  lg:max-h-24" src="/icons/python.svg" alt="">
+                <img class=" max-h-44 mx-auto  lg:max-h-24" src="/public/icons/python.svg" alt="">
                 <h3>Python Developer</h3>
             </div>
             <div class="text-center font-bold text-white text-2xl ">
-                <img class=" max-h-44 mx-auto lg:max-h-24" src="/icons/ai.svg" alt="">
+                <img class=" max-h-44 mx-auto lg:max-h-24" src="/public/icons/ai.svg" alt="">
                 <h3>Designer</h3>
             </div>
         </div>
@@ -118,19 +118,19 @@
                 <div class="flex px-10 justify-center items-center py-2 lg:px-0 lg:justify-start ">
                     <div class="text-white lg:space-y-0 space-y-5">
                         <div class="lg:flex lg:items-center lg:text-left lg:pl-5">
-                            <img class="mx-auto lg:m-1" src="/icons/photoshop.svg" alt="" width="40">
+                            <img class="mx-auto lg:m-1" src="/public/icons/photoshop.svg" alt="" width="40">
                             <span>Adobe Photoshop</span>
                         </div>
                         <div class="lg:flex lg:items-center text-center lg:pl-4">
-                            <img class="mx-auto lg:m-1"src="/icons/ai.svg" alt="" width="40">
+                            <img class="mx-auto lg:m-1"src="/public/icons/ai.svg" alt="" width="40">
                             <span>Adobe Illustrator</span>
                         </div>
                         <div class="lg:flex lg:items-center  text-center  lg:pl-4">
-                            <img  class="mx-auto lg:m-1"src="/icons/python.svg" width="40">
+                            <img  class="mx-auto lg:m-1"src="/public/icons/python.svg" width="40">
                             <span>Python</span>
                         </div>
                         <div class="lg:flex lg:items-center  text-center  lg:pl-4">
-                            <img  class="mx-auto lg:m-1"src="/icons/bootstrap-4.svg" alt="" width="40">
+                            <img  class="mx-auto lg:m-1"src="/public/icons/bootstrap-4.svg" alt="" width="40">
                             <span>Bootstrap</span>
                         </div>
                     </div>
@@ -153,32 +153,32 @@
                         <ol
                             class="text-white space-y-5 list-inside lg:grid lg:grid-cols-3 lg:gap-3 lg: place-items-center lg:list-none lg:space-y-0 ">
                             <div class=" transform hover:scale-110 duration-100">
-                                <img class="mx-auto max-w-50" src="/icons/html.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50" src="/public/icons/html.svg" alt="" width="50px">
                                 <li class="">HTML</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-blue-400">
-                                <img class="max-w-50 mx-auto" src="/icons/css.svg" alt="" width="50px">
+                                <img class="max-w-50 mx-auto" src="/public/icons/css.svg" alt="" width="50px">
                                 <li class="">CSS</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-purple-500">
-                                <img class="max-w-50 mx-auto " src="/icons/bootstrap-4.svg" alt="" width="50px">
+                                <img class="max-w-50 mx-auto " src="/public/icons/bootstrap-4.svg" alt="" width="50px">
                                 <li class="">Bootstrap</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-blue-200">
-                                <img class="max-w-50 mx-auto lg:mb-4" src="/icons/tailwind-css-2.svg" alt=""
+                                <img class="max-w-50 mx-auto lg:mb-4" src="/public/icons/tailwind-css-2.svg" alt=""
                                     width="50px">
                                 <li class="">Tailwind</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-yellow-400">
-                                <img class="max-w-50 mx-auto" src="/icons/javascript-1.svg" alt="" width="40px">
+                                <img class="max-w-50 mx-auto" src="/public/icons/javascript-1.svg" alt="" width="40px">
                                 <li class="">Javascript</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-green-400">
-                                <img class="max-w-50 mx-auto" src="/icons/django.svg" alt="" width="40px">
+                                <img class="max-w-50 mx-auto" src="/public/icons/django.svg" alt="" width="40px">
                                 <li class="">Django</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-purple-200">
-                                <img class="max-w-50 mx-auto" src="/icons/php-1.svg" alt="" width="50px">
+                                <img class="max-w-50 mx-auto" src="/public/icons/php-1.svg" alt="" width="50px">
                                 <li class="">PHP</li>
                             </div>
                         </ol>
@@ -200,15 +200,15 @@
                     <div class="text-center">
                         <ol class="text-white list-inside  space-y-3 lg:gap-2 lg:list-none lg:space-y-2">
                             <div class=" transform hover:scale-110 duration-100 hover:text-yellow-900">
-                                <img class="mx-auto max-w-50 lg:ml-5" src="/icons/feather.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 lg:ml-5" src="/public/icons/feather.svg" alt="" width="50px">
                                 <li class="">Tkinter</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-green-300">
-                                <img class="mx-auto max-w-50" src="/icons/turtle.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50" src="/public/icons/turtle.svg" alt="" width="50px">
                                 <li class="">Turtle</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-green-400">
-                                <img class="max-w-50 mx-auto" src="/icons/django.svg" alt="" width="40px">
+                                <img class="max-w-50 mx-auto" src="/public/icons/django.svg" alt="" width="40px">
                                 <li class="">Django</li>
                             </div>
                         </ol>
@@ -231,27 +231,27 @@
                         <ol
                             class="text-white list-inside  space-y-5 lg:grid lg:grid-cols-3 lg:gap-10 lg: place-items-center lg:list-none lg:space-y-0 ">
                             <div class=" transform hover:scale-110 duration-100 hover:text-blue-500">
-                                <img class="mx-auto max-w-50" src="/icons/photoshop.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50" src="/public/icons/photoshop.svg" alt="" width="50px">
                                 <li class="pt-2">Adobe Photoshop</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-yellow-800">
-                                <img class="mx-auto max-w-50" src="/icons/ai.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50" src="/public/icons/ai.svg" alt="" width="50px">
                                 <li class="pt-2">Adobe Illustrator</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-purple-400">
-                                <img class="mx-auto max-w-50 " src="/icons/xd.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 " src="/public/icons/xd.svg" alt="" width="50px">
                                 <li class="pt-2">Adobe XD</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-red-500">
-                                <img class="mx-auto max-w-50 " src="/icons/sketchup-icon.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 " src="/public/icons/sketchup-icon.svg" alt="" width="50px">
                                 <li class="pt-2">Sketchup</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-red-400">
-                                <img class="mx-auto max-w-50 " src="/icons/autocad-icon.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 " src="/public/icons/autocad-icon.svg" alt="" width="50px">
                                 <li class="pt-2">Autocad</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-pink-500">
-                                <img class="mx-auto max-w-50 " src="/icons/figma.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 " src="/public/icons/figma.svg" alt="" width="50px">
                                 <li class="pt-2">Figma</li>
                             </div>
                         </ol>
