--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/public/styless.css">
     <title>Shayan Hosseinzadeh</title>
 </head>
 
 <body class=" bg-background lg:overflow-x-hidden lg:overflow-y-hidden">
+
     <aside
-        class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2">
+        class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2 md:max-w-full">
         <div>
             <img class="rounded-full max-w-xs lg:w-1/2 lg:mx-auto" src="/public/img/logojpeg.jpeg" alt="">
         </div>
         <div class="inline-flex space-x-5 py-5">
+            <a class="transform duration-100 hover:scale-125 animate-pulse antialiased" href="https://www.instagram.com/shayan_ho65/">
             <i class="fa fa-2x fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a  class="transform duration-100 hover:scale-125 animate-pulse antialiased" href="https://github.com/ShayanHosseinzadeh">
             <i class="fa fa-2x fa-github" aria-hidden="true"></i>
+            </a>
             <i class="fa fa-2x fa-linkedin" aria-hidden="true"></i>
-            <i class="fa fa-2x fa-telegram" aria-hidden="true"></i>
+            <a class="transform duration-100 hover:scale-125 animate-pulse antialiased"  href="https://t.me/shayop">
+            <i class="fa fa-2x fa-telegram" aria-hidden="true"></i> 
+
+            </a>
         </div>
         <h1 class="font-bold text-xl">Shayan Hosseinzadeh</h1>
         <div class="text-center space-y-2 pt-2 text-gray-400 font-semibold text-sm">
@@ -70,7 +79,7 @@
         <div class="hidden lg:visible lg:block m-3 lg:relative">
             <img class="max-h-500 opacity-50 " src="/public/img/back.jpeg" alt="" width="1250">
             <img class="absolute -right-10 bottom-0" src="/public/img/me2.png" alt="" width="400">
-            <div class="absolute top-14  whitespace-pre-line px-5 pt-10 ">
+            <div class="absolute top-10  whitespace-pre-line px-5 pt-10 ">
                 <h1 class="text-white font-bold text-4xl relative">Those who cannot
                     <span class="text-yellow-500 ">change their minds</span>
                     cannot <span class="text-green-600">change anything</span>.
@@ -80,7 +89,45 @@
                         class="text-blue-500 italic">&lt/code&gt</span>
                 </h2>
             </div>
-            </h1>
+            <!-- Resume Modal  -->
+            <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
+                class="absolute  bottom-3 left-4 text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-10 py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                type="button">
+                Download CV
+            </button>
+            <div id="popup-modal" tabindex="-1"
+                class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+                <div class="relative w-full max-w-md max-h-full">
+                    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                        <button type="button"
+                            class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                            data-modal-hide="popup-modal">
+                            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 14 14">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                            </svg>
+                            <span class="sr-only">Close modal</span>
+                        </button>
+                        <div class="p-6 text-center">
+                            <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                            </svg>
+                            <h3 class="mb-5 text-lg font-bold text-black dark:text-gray-400">Please Select the language</h3>
+                        <a href="/Resumes/Persian.pdf"><button data-modal-hide="popup-modal" type="button"
+                                class="text-white bg-green-600 hover:bg-black focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-lg inline-flex items-center px-10 py-4 text-center mr-2">
+                                Persian
+                            </button></a>
+                            <a href="/Resumes/English.pdf"><button data-modal-hide="popup-modal" type="button"
+                                class=" bg-red-500 hover:bg-black focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-lg font-bold px-10 py-4 hover:text-white focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 ">
+                                English</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <!-- icons -->
         <div
@@ -122,15 +169,15 @@
                             <span>Adobe Photoshop</span>
                         </div>
                         <div class="lg:flex lg:items-center text-center lg:pl-4">
-                            <img class="mx-auto lg:m-1"src="/public/icons/ai.svg" alt="" width="40">
+                            <img class="mx-auto lg:m-1" src="/public/icons/ai.svg" alt="" width="40">
                             <span>Adobe Illustrator</span>
                         </div>
                         <div class="lg:flex lg:items-center  text-center  lg:pl-4">
-                            <img  class="mx-auto lg:m-1"src="/public/icons/python.svg" width="40">
+                            <img class="mx-auto lg:m-1" src="/public/icons/python.svg" width="40">
                             <span>Python</span>
                         </div>
                         <div class="lg:flex lg:items-center  text-center  lg:pl-4">
-                            <img  class="mx-auto lg:m-1"src="/public/icons/bootstrap-4.svg" alt="" width="40">
+                            <img class="mx-auto lg:m-1" src="/public/icons/bootstrap-4.svg" alt="" width="40">
                             <span>Bootstrap</span>
                         </div>
                     </div>
@@ -200,7 +247,8 @@
                     <div class="text-center">
                         <ol class="text-white list-inside  space-y-3 lg:gap-2 lg:list-none lg:space-y-2">
                             <div class=" transform hover:scale-110 duration-100 hover:text-yellow-900">
-                                <img class="mx-auto max-w-50 lg:ml-5" src="/public/icons/feather.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 lg:ml-5" src="/public/icons/feather.svg" alt=""
+                                    width="50px">
                                 <li class="">Tkinter</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-green-300">
@@ -243,7 +291,8 @@
                                 <li class="pt-2">Adobe XD</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-red-500">
-                                <img class="mx-auto max-w-50 " src="/public/icons/sketchup-icon.svg" alt="" width="50px">
+                                <img class="mx-auto max-w-50 " src="/public/icons/sketchup-icon.svg" alt=""
+                                    width="50px">
                                 <li class="pt-2">Sketchup</li>
                             </div>
                             <div class=" transform hover:scale-110 duration-100 hover:text-red-400">
@@ -265,6 +314,9 @@
         </div>
         </div>
     </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
+
 </body>
 <script src="https://kit.fontawesome.com/e127519916.js" crossorigin="anonymous"></script>
 
