--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <!-- cv button mobile  -->
             <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-            class="= mt-6 mb-2  text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            class="= lg:hidden mt-6 mb-2  text-white bg-blue-700 hover:bg-blue-800 transform focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm  py-3 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
             type="button">
             Download CV
         </button>
