--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/public/styless.css">
     <link rel="shortcut icon" href="/public/icons/favicon.png" type="image/x-icon">
+    <meta name="description" content="This is a resume page for Shayan Hosseinzadeh. I hope you enjoy!">
     <title>Shayan Hosseinzadeh</title>
 </head>
 
