--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="/public/styless.css">
     <link rel="shortcut icon" href="/public/icons/favicon.png" type="image/x-icon">
     <meta name="description" content="This is a resume page for Shayan Hosseinzadeh. I hope you enjoy!">
+    
     <title>Shayan Hosseinzadeh</title>
 </head>
 
 <body class=" bg-background lg:overflow-x-hidden lg:overflow-y-hidden">
 
-    <div data-dial-init class="fixed right-6 bottom-6 group z-20" >
+    <div data-dial-init class="fixed right-6 bottom-6 group z-20 lg:hidden" >
         <div id="speed-dial-menu-default" class="flex flex-col items-center hidden mb-4 space-y-2">
             <button type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="left" class="flex z-20  justify-center items-center w-[52px] h-[52px] text-gray-500 hover:text-gray-900 bg-white rounded-full border border-gray-200 dark:border-gray-600 shadow-sm dark:hover:text-white dark:text-gray-400 hover:bg-yellow-500 dark:bg-gray-700 dark:hover:bg-gray-600 focus:ring-4 focus:ring-gray-300 focus:outline-none dark:focus:ring-gray-400">
                 <a href="tel:+9809387034942"><i class="fa-mobile fa fa-2xl"></i></a>
