Fixed Big Monitors Responisveness

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     
     <aside
-        class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2 md:max-w-full">
+        class="w-full text-white bg-aside flex flex-col max-w-lg items-center justify-center pt-5 lg:max-w-sm lg:-mt-2 md:max-w-full 2xl:pb-14">
         <div class="lg:w-5/6">
             <img class="rounded-full max-w-sm w-5/6 mx-auto  lg:w-1/2 lg:mx-auto" src="/public/img/IMG_8125.jpg" alt="">
         </div>
@@ -150,10 +150,10 @@
             </div>
         </div>
     </aside>
-    <main class="lg:absolute lg:right-2 lg:top-0">
+    <main class="lg:absolute lg:right-2 lg:top-0 xl:left-96 xl:pl-4">
         <!-- slider  -->
         <div class="hidden lg:visible lg:block m-3 lg:relative">
-            <img class="max-h-500 opacity-50 " src="/public/img/back.jpeg" alt="" width="1250">
+            <img class="max-h-500 opacity-50 2xl:w-full " src="/public/img/back.jpeg" alt="" width="1250">
             <img class="absolute -right-10 bottom-0" src="/public/img/me2.png" alt="" width="400">
             <div class="absolute top-10  whitespace-pre-line px-5 pt-10 ">
                 <h1 class="text-white font-bold text-4xl relative">Those who cannot
@@ -231,7 +231,7 @@
         </div>
         <hr class="bg-black w-full p-2 lg:hidden">
         <!-- skills  -->
-        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3">My Skills</h3>
+        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3 2xl:text-center 2xl:py-9">My Skills</h3>
         <div class="flex flex-col lg:flex-row lg:justify-between lg:space-x-4">
             <!-- cards -->
             <!-- first-card  -->
