--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- slider  -->
         <div class="hidden lg:visible lg:block m-3 lg:relative">
             <img class="max-h-500 opacity-50 2xl:w-full " src="/public/img/back.jpeg" alt="" width="1250">
-            <img class="absolute -right-10 bottom-0" src="/public/img/me2.png" alt="" width="400">
+            <!-- <img class="absolute -right-10 bottom-0" src="/public/img/me2.png" alt="" width="400"> -->
             <div class="absolute top-10  whitespace-pre-line px-5 pt-10 ">
                 <h1 class="text-white font-bold text-4xl relative">Those who cannot
                     <span class="text-yellow-500 ">change their minds</span>
