Fixed the MD resolution

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
         </div>
     </aside>
-    <main class="lg:absolute lg:right-2 lg:top-0 xl:left-96 xl:pl-4">
+    <main class="lg:absolute lg:right-2 lg:top-0 xl:left-96 xl:pl-4 md:left-96 md:ml-4">
         <!-- slider  -->
         <div class="hidden lg:visible lg:block m-3 lg:relative">
             <img class="max-h-500 opacity-50 2xl:w-full " src="/public/img/back.jpeg" alt="" width="1250">
@@ -198,7 +198,7 @@
                                 class="text-white bg-green-600 hover:bg-black focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-lg inline-flex items-center px-10 py-4 text-center mr-2">
                                 Persian
                             </button></a>
-                            <a href="/Resumes/English.pdf"><button data-modal-hide="popup-modal" type="button"
+                            <a href="/Resumes/English.pdf" target="_blank"><button data-modal-hide="popup-modal" type="button"
                                 class=" bg-red-500 hover:bg-black focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-lg font-bold px-10 py-4 hover:text-white focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 ">
                                 English</button></a>
                         </div>
