--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         <hr class="bg-black w-full p-2 lg:hidden">
         <!-- skills  -->
-        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3 2xl:text-center 2xl:py-9">My Skills</h3>
+        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3 2xl:text-center xl:py-0 ">My Skills</h3>
         <div class="flex flex-col lg:flex-row lg:justify-between lg:space-x-4">
             <!-- cards -->
             <!-- first-card  -->
