--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                             </svg>
                             <h3 class="mb-5 text-lg font-bold text-black dark:text-gray-400">Please Select the language</h3>
-                        <a href="/Resumes/Persian.pdf"><button data-modal-hide="popup-modal" type="button"
+                        <a href="/Resumes/Persian.pdf" ><button data-modal-hide="popup-modal" type="button"
                                 class="text-white bg-green-600 hover:bg-black focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-lg inline-flex items-center px-10 py-4 text-center mr-2">
                                 Persian
                             </button></a>
@@ -231,7 +231,7 @@
         </div>
         <hr class="bg-black w-full p-2 lg:hidden">
         <!-- skills  -->
-        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3 2xl:text-center xl:py-0 ">My Skills</h3>
+        <h3 class="text-white text-center text-2xl font-bold py-3 lg:text-left lg:pt-2 lg:pb-3 2xl:text-center xl:py-5 xl:my-4 ">My Skills</h3>
         <div class="flex flex-col lg:flex-row lg:justify-between lg:space-x-4">
             <!-- cards -->
             <!-- first-card  -->
