--- a/rad/index.html
+++ b/rad/index.html
@@ -10,14 +10,14 @@
 <body>
     <nav>
         <div>
-            <img src="/icons/home.png" alt="">
+            <img src="icons/home.png" alt="">
             <li>Home</li>
-            <img src="/icons/buy.png" alt="">
+            <img src="icons/buy.png" alt="">
             <li>Buy ticket</li>
-            <img src="/icons/aboutus.png" alt="">
-            <a href="/aboutus.html"><li>About us</li></a>
-            <img src="/icons/contactus.png" alt="">
-            <a href="/contactus.html"><li>Contact us </li></a>
+            <img src="icons/aboutus.png" alt="">
+            <a href="aboutus.html"><li>About us</li></a>
+            <img src="icons/contactus.png" alt="">
+            <a href="contactus.html"><li>Contact us </li></a>
         </div>
     </nav>
     <center><img src="/img/theater.jpg" alt="" width="500" height="500"></center>
