--- a/rad/index.html
+++ b/rad/index.html
@@ -20,6 +20,6 @@
             <a href="contactus.html"><li>Contact us </li></a>
         </div>
     </nav>
-    <center><img src="/img/theater.jpg" alt="" width="500" height="500"></center>
+    <center><img src="img/theater.jpg" alt="" width="500" height="500"></center>
 </body>
 </html>
