--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--=== custom css ===-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
-    <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/ico" href="assets/images/logo.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <!--=== custom css ===-->
@@ -146,7 +146,7 @@
                   </div>
                   <div class="cv_address_text">
                     <h5>Email</h5>
-                    <a href="mailto:shayanhosseinzadeh1@Gmail.com"><span class="__cf_email__" data-cfemail="83e6fbe2eef3efe6c3e4eee2eaefade0ecee">shayanhosseinzadeh1@gmail.com</span></a>
+                    <a href="mailto:shayanhosseinzadeh1@Gmail.com"><span class="__cf_email__">shayanhosseinzadeh1@gmail.com</span></a>
                   </div>
                 </div>
               </a>
