--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="col-xl-6">
               <div class="cv_banner_text">
-                <h5>Developer / Avisor / Lecturer</h5>
+                <h5>Developer / Advisor / Lecturer</h5>
                 <h1>Hello! <span><img src="assets/images/hand.svg" class="img-fluid"></span> I Am</h1>
                 <h1 class="cv_profile_name"></h1>
                 <a href="mailto:shayanhosseinzadeh1@Gmail.com" class="cv_btn">CONTACT ME</a>
