--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               <div class="cv_menus_wrapper">
                 <ul class="cv_menus">
                   <li>
-                    <a href="index.html">Home</a>
+                    <a href="https://shayandev.ir/">Home</a>
                   </li>
                   <li>
                     <a class="active" href="about.html">About</a>
