--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="cv_menus_wrapper">
                 <ul class="cv_menus">
                   <li>
-                    <a class="active" href="index.html">Home</a>
+                    <a class="active" href="https://shayandev.ir/">Home</a>
                   </li>
                   <li>
                     <a href="about.html">About</a>
